--- a/search/alfresco-search.service
+++ b/search/alfresco-search.service
@@ -1,8 +1,9 @@
 [Unit]
 Description=Alfresco Solr6 Component
-After=network-online.target nfs.target
+After=network.target
 
 [Service]
+PermissionsStartOnly=True
 ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/alf_data/solr6/content
 ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/alf_data/solr6/models
 ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/alf_data/solr6/index
@@ -14,9 +15,9 @@ ExecStop=/opt/alfresco/solr6/solr/bin/solr stop
 Type=forking
 Restart=always
 User=alfresco
-Group=nogroup
+Group=alfresco
 RuntimeDirectory=alfresco-solr
 RuntimeDirectoryMode=750
-LimitNOFILE=8192:65536
+
 [Install]
 WantedBy=multi-user.target
