--- a/search/alfresco-search.service
+++ b/search/alfresco-search.service
@@ -8,7 +8,9 @@ ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/alf_data/solr6/content
 ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/alf_data/solr6/models
 ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/alf_data/solr6/index
 ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/alf_data/solr6/solrhome
+ExecStartPre=chown -R alfresco:alfresco /opt/alfresco/alf_data/solr6
 ExecStartPre=/bin/mkdir -p -m 2755 /opt/alfresco/logs/solr6
+ExecStartPre=chown -R alfresco:alfresco /opt/alfresco/logs/solr6
 ExecStartPre=/bin/cp -r /opt/alfresco/solr6/solrhome /opt/alfresco/alf_data/solr6/
 ExecStart=/opt/alfresco/solr6/solr/bin/solr start
 ExecStop=/opt/alfresco/solr6/solr/bin/solr stop
