--- a/tomcat/alfresco-global.properties
+++ b/tomcat/alfresco-global.properties
@@ -121,6 +121,14 @@ img.exe=/opt/alfresco/scripts/limitconvert.sh
 img.root=/etc/ImageMagick
 img.dyn=/usr/lib
 
+# Disable ATS
+transform.service.enabled=false
+
+# Alfresco Transform Service
+local.transform.service.enabled=false
+
+legacy.transform.service.enabled=true
+
 #-----------------------
 # Index
 #-----------------------
