--- a/nginx/alfresco.conf
+++ b/nginx/alfresco.conf
@@ -16,7 +16,7 @@
 	server {
 		listen        80 ;
 		listen   [::]:80 ;
-		server_name example.com www.example.com;
+		server_name tramitador.aecid.local;
 
 		root /opt/alfresco/www;
 		index index.html index.htm;
